added custom authorizer

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "serverless-offline": "^14.4.0"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@middy/core": "^6.0.0",
-    "@middy/http-cors": "^6.0.0"
+    "dotenv": "^16.4.7"
   }
 }
